Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7995

Address fomat string / argument mismatches

    XMLWordPrintable

Details

    Description

      Format string / argument mismatches were found using cppcheck. The attached patch corrects a number of these.

      Attachments

        1. post_r63081_formatstringmismatchgrouped.patch
          6 kB
          andygui
        2. armlib.formatstring.patch
          0.5 kB
          andygui
        3. win32ss.formatstring.patch
          1 kB
          andygui
        4. system.formatstring.patch
          1 kB
          andygui
        5. shell.formatstring.patch
          2 kB
          andygui
        6. setup.formatstring.patch
          0.5 kB
          andygui
        7. services.formatstring.patch
          0.8 kB
          andygui
        8. applications.formatstring.patch
          5 kB
          andygui

        Activity

          People

            AmineKhaldi AmineKhaldi
            andygui andygui
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: