[MPLAY32][MSPAINT][NOTEPAD][REGEDIT][WINHLP32] * Fix some format string / argument mismatches. By Andre Guibert de Bruet. CORE-7995

svn path=/trunk/; revision=63080